--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "authors": "yurayarosh",
   "devDependencies": {
+    "animejs": "^3.1.0",
     "autoprefixer": "^9.5.1",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^5.0.0",
     "browser-sync": "^2.10.0",
     "css-mqpacker": "^6.0.2",
