--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "lightgallery": "^1.6.12",
     "lozad": "^1.9.0",
     "parallax-js": "^3.1.0",
+    "perfect-scrollbar": "^1.4.0",
     "swiper": "^4.5.0",
     "throttle-debounce": "^2.1.0"
   }
